# wiki-in-a-box

./: .gitignore  Makefile  README.md  docker-compose.yml
api/: Dockerfile  main.py  pyproject.toml  requirements.txt  retrieval.py  title_index.py
docs/: API.md  TODO.md  WHITEPAPER.md
frontend/: index.html
ops/: nginx.conf
