[project]
name = "wiki-in-a-box-api"
version = "0.1.0"
description = "Wiki‑in‑a‑Box FastAPI service (RAG over offline Wikipedia)"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "httpx==0.27.2",
  "sentence-transformers==3.0.1",
  "beautifulsoup4==4.12.3",
  "libzim",
  "numpy==1.26.4",
  "orjson==3.10.7",
  "python-multipart==0.0.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
